# flowrs-wasm

./: Cargo.toml  README.md  index.html
src/: comp.rs  lib.rs
src/comp/: flow_model.rs
src/flow/: app_state.rs  dynamic_flow.rs  mod.rs
tests/flow/: app_state.rs
