[package]
name = "flowrs-wasm"
version = "0.1.0"
edition = "2021"
authors = ["wuermseer.florian@gmail.com", "markus.friedrich@hm.edu"]
description = "A WASM API for the flowrs library."
repository = "https://github.com/flow-rs/flowrs-wasm"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs-wasm"
keywords = ["flow", "fbp", "wasm"]
categories = ["data-structures", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flowrs = "0.1.0"
flowrs-derive = "0.1.0"
flowrs-std = "0.1.0"
serde = { version = "1.0.166", features = ["derive", "rc"] }
serde_json = "1.0.100"
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
